--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+	<!-- security -->
+	<!-- <dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency> -->
+
 	<!-- MySQL -->
    <dependency>
 	<groupId>com.mysql</groupId>
@@ -49,7 +55,6 @@
 	<version>8.0.33</version>
 	<scope>runtime</scope>
 </dependency>
-
 
     <!-- Lombok -->
     <dependency>
